<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_a_quote_nonline_now"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        />

    <TextView
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_insurance"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:text="@string/auto_nl"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/color_btn"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:text="@string/auto_ns"
            android:layout_marginStart="@dimen/_16dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/color_btn"
            />
    </LinearLayout>


    <TextView
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_insurance"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHomeNL"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:text="@string/home_nl"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/color_btn"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:text="@string/home_ns"
            android:layout_marginStart="@dimen/_16dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/color_btn"
            />
    </LinearLayout>

    <TextView
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_call"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtCall"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_844_554_0525"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    </LinearLayout>
</ScrollView>